--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,13 @@
 	  <artifactId>gson</artifactId>
 	  <version>2.8.6</version>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+	<dependency>
+	    <groupId>mysql</groupId>
+	    <artifactId>mysql-connector-java</artifactId>
+	    <version>5.1.46</version>
+	</dependency>
+	
   </dependencies>
 
   <build>
